--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>🐰·🐰·🐰·🐰·🐰·🐰</p>
         <br>
         <h2 style="background-color: pink;"><em>If you have anything to do,you can <a
-                    href=" C:\Users\Yisoo\Desktop\web大一下学期\contact-me.html">contact-me.</a>thank you!💕</em>
+                    href="contact-me.html">contact-me.</a>thank you!💕</em>
         </h2>
     </center><br>
 </body>
